tests/ui/associated-types/defaults-mixed.stderr
error[E0046]: not all trait items implemented, missing: `Bar`
  --> $DIR/defaults-mixed.rs:11:1
   |
LL |     type Bar;
   |     -------- `Bar` from trait
...
LL | impl Trait for () {}
   | ^^^^^^^^^^^^^^^^^ missing `Bar` in implementation

error[E0046]: not all trait items implemented, missing: `Bar`
  --> $DIR/defaults-mixed.rs:14:1
   |
LL |     type Bar;
   |     -------- `Bar` from trait
...
LL | impl Trait for bool {
   | ^^^^^^^^^^^^^^^^^^^ missing `Bar` in implementation

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0046`.
